# three-space

./: .gitignore  CMakeLists.txt  README.md
cmake/: notes.md
lib/: CMakeLists.txt  Config.cmake.in
lib/sp3/: CMakeLists.txt  angle.h  axes.h  matrix.h  matrix_vector_functions.h  point.h  pose.h  real.h  rotation.h  transform.h  unit_vector.h  vector.h  vector_point_functions.h
lib/sp3/detail/: homogeneous.h
tests/: CMakeLists.txt  angle-tests.cpp  matrix-tests.cpp  point-tests.cpp  rotation-tests.cpp  transform-tests.cpp  unit_vector-tests.cpp  vector-tests.cpp
